objects/Assistance_Program__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please describe the Assistance Program (i.e. Which crisis is it related to? Who does it affect? What does it provide?)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <inlineHelpText>How are you prioritizing this program compared to others?</inlineHelpText>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <inlineHelpText>Last day of assistance program</inlineHelpText>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <inlineHelpText>Initial date of assistance program</inlineHelpText>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Budget__c</fullName>
        <formula>Budget__c -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Recipients__c</fullName>
        <inlineHelpText>Who will be receiving assistance? (i.e. Employees)</inlineHelpText>
        <label>Target Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Roll-up summary field depicting the total assistance provided thus far.</description>
        <label>Total Cost</label>
        <summarizedField>Assistance__c.Amount__c</summarizedField>
        <summaryForeignKey>Assistance__c.Assistance_Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Individuals_Helped__c</fullName>
        <description>Roll-up summary depicting the number of individuals currently being provided with aid.</description>
        <label>Total Individuals Helped</label>
        <summaryForeignKey>Assistance__c.Assistance_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Employee Assistance Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Recipients__c</columns>
        <columns>Program_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assistance Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Assistance Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>